Fixed scrollbar resize issue

--- a/themes/etc/_bootstrap.scss
+++ b/themes/etc/_bootstrap.scss
@@ -19,6 +19,7 @@ body {
     left:0px;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 [unselectable=on] {
